--- a/CodePulseAPI/appsettings.json
+++ b/CodePulseAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodePulseConnetionString": "Server=DESKTOP-A9SIEOB; Database=CodePulseDb; TrustServerCertificate=True; Trusted_Connection=True"
+    "CodePulseConnetionString": "Server=DESKTOP-A9SIEOB; Database=SaborSocialDb; TrustServerCertificate=True; Trusted_Connection=True"
   }
 
 
